lambdacube-dsl/tests/accept/uniformparam03.lc
render modelViewProj = let
  emptyFB           = FrameBuffer (colorImage1 (V4F 0.5 0.0 0.4 1.0))
  rasterCtx         = LineCtx 1.0 LastVertex
  fragmentCtx       = AccumulationContext (ColorOp NoBlending (V4B True True True True))
  vertexShader v    = VertexOut (PrimMulMatVec modelViewProj v) 1.0 () (Flat v)
  vertexStream      = Fetch "stream4" Lines (IV4F "position4")
  primitiveStream   = Transform vertexShader vertexStream
  fragmentStream    = Rasterize rasterCtx primitiveStream
  fragmentShader f  = FragmentOut f
  frame             = Accumulate fragmentCtx PassAll fragmentShader fragmentStream emptyFB
 in ScreenOut frame

main = render (Uni (IM44F "MVP"))
